RavenDB-6644 Add dropdown and fix size jump on "offline"

--- a/src/Raven.Studio/wwwroot/Content/css/pages/databases.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/databases.less
@@ -49,10 +49,12 @@
         position: relative;
 
         @media (min-width:@screen-sm) and (max-width:@screen-lg-max) {
-
-            .info-container {
+            .info-grow {
                 order: 1;
                 flex-grow: 1;
+            }
+
+            .info-container {
             }
 
             .properties-container {
